# microblog

./: .gitignore  pyproject.toml  requirements.txt
accounts/: admin.py  forms.py  middleware.py  models.py  tests.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_user_about_me_user_last_seen.py  0003_user_following.py  0004_alter_user_about_me_alter_user_following_and_more.py
accounts/templatetags/: avatar.py
blog/: forms.py  models.py  tests.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_post_options_alter_post_author_alter_post_body_and_more.py
blog/templatetags/: dayjs.py
locale/es/LC_MESSAGES/: django.po
locale/fr/LC_MESSAGES/: django.po
project/: settings.py  urls.py
templates/: 404.html  500.html  _post.html  base.html  edit_profile.html  index.html  login.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  register.html  user.html
templates/email/: password_reset.html  password_reset.txt  password_reset_subject.txt
